Removed overflow:auto from infowindow wrapping div to stop scroll bars appearing and wrecking the layout

--- a/app/public/styles/_gmapsinfowindow.scss
+++ b/app/public/styles/_gmapsinfowindow.scss
@@ -1,6 +1,5 @@
 .info-window {
 	clear: both;
-	overflow: auto;
 }
 
 .info-window-text {
